2006-05-18  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/tree/TreePath/PR27651.java: New test.

2006-05-17  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/testlet/javax/imageio/stream/MemoryCacheImageInputStream/TestImageInputStreamImpl.java:
	New test.

2006-05-16  Lillian Angel  <langel@redhat.com>
	
	* gnu/testlet/java/awt/font/ImageGraphicAttribute: New directory
	* gnu/testlet/java/awt/font/ImageGraphicAttribute/ImageGraphicAttributeTest.java: New test.
	* gnu/testlet/java/awt/font/ImageGraphicAttribute/image.bmp: New bitmap used in test.

2006-05-16  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/DefaultButtonModel/addActionListener.java: 
	New file,
	* gnu/testlet/javax/swing/DefaultButtonModel/constants.java: Likewise,
	* gnu/testlet/javax/swing/DefaultButtonModel/constructor.java: 
	Likewise,
	* gnu/testlet/javax/swing/DefaultButtonModel/getSelectedObjects.java: 
	Likewise,
	* gnu/testlet/javax/swing/DefaultButtonModel/MyDefaultButtonModel.java:
	Likewise,
	* gnu/testlet/javax/swing/DefaultButtonModel/setActionCommand.java: 
	Likewise,
	* gnu/testlet/javax/swing/DefaultButtonModel/setArmed.java: Likewise,
	* gnu/testlet/javax/swing/DefaultButtonModel/setEnabled.java: Likewise,
	* gnu/testlet/javax/swing/DefaultButtonModel/setGroup.java: Likewise,
	* gnu/testlet/javax/swing/DefaultButtonModel/setMnemonic.java: 
	Likewise,
	* gnu/testlet/javax/swing/DefaultButtonModel/setPressed.java: Likewise,
	* gnu/testlet/javax/swing/DefaultButtonModel/setRollover.java: 
	Likewise,
	* gnu/testlet/javax/swing/DefaultButtonModel/setSelected.java: 
	Likewise.

2006-05-16  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/SizeSequence/constructors.java: New test,
	* gnu/testlet/javax/swing/SizeSequence/getIndex.java: New test,
	* gnu/testlet/javax/swing/SizeSequence/getSize.java: New test,
	* gnu/testlet/javax/swing/SizeSequence/getSizes.java: New test,